# library-organizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-design.md  architecture.md  classification-patterns.md  defect-ledger.md  formats.md  lessons-learned.md  roadmap.md  runbook.md  web-ui.md
evals/: classify.json  critics.json  known-failures.jsonl  triage.json
evals/dogfood/: classify.json
src/mlo/: __init__.py  __main__.py  apply.py  audioclass.py  bookmeta.py  capacity.py  cli.py  config.py  containers.py  distill.py  docmeta.py  doctor.py  dotenv.py  exif.py  fingerprint.py  fuzzy.py  hashdrift.py  hints.py  identify.py  imgclass.py  interview.py  naming.py  ole.py  pathmeta.py  pilot.py  plan.py  provenance.py  report.py  safeops.py  scan.py  seam.py  selfimprove.py  snapshot.py  sniff.py  staging.py  store.py  sweep.py  taxonomy.py  trash.py  undo.py  (+5 more)
src/mlo/agent/: __init__.py  critics.py  evals.py  llm.py  protocol.py  tasks.py
src/mlo/enrich/: __init__.py  evidence.py  id3.py  mediafacts.py  searxng.py  subs.py  tmdb.py  websearch.py
tests/: conftest.py  helpers.py  helpers_plan.py  test_agent_evals.py  test_agent_protocol.py  test_agent_tasks.py  test_apply_audit.py  test_apply_idempotent.py  test_architecture.py  test_audioclass.py  test_bookmeta.py  test_capacity.py  test_cli_e2e.py  test_config.py  test_containers.py  test_critics.py  test_defect_ledger.py  test_dispose.py  test_distill.py  test_docmeta.py  test_doctor.py  test_dotenv.py  test_enrich.py  test_evidence.py  test_exif.py  test_fingerprint.py  test_flatten_provenance.py  test_fuzzy.py  test_hashdrift.py  test_hints.py  test_identify.py  test_imgclass.py  test_interview.py  test_known_failures.py  test_mediafacts.py  test_naming.py  test_ole.py  test_p13_features.py  test_p15_hardening.py  test_p17_ebooks.py  (+30 more)
